--- a/ne_control/templates/ne_control/list.html
+++ b/ne_control/templates/ne_control/list.html
@@ -18,7 +18,7 @@
       <!-- Menu da lista das NEs -->
       <table class="w-full text-sm text-center border-gray-300">
         <!-- Campos da lista. -->
-        <thead class="bg-gray-200 text-gray-700 sticky top-0">
+        <thead class="bg-gray-200 text-gray-700 sticky top-0 z-10">
           <tr>
             <th class="px-4 py-2">PI</th>
             <th class="px-4 py-2">NE</th>
