--- a/ne_control/templates/ne_control/user_edit.html
+++ b/ne_control/templates/ne_control/user_edit.html
@@ -2,44 +2,57 @@
 
 {% load ne_filters %}
 
+{% load static %}
+
 {% block title %} {{user.username }} {% endblock %}
 
 {% block content %}
 
-<div class="pt-4">
-    <a href="{% url 'manage' %}">Voltar</a>
-    <form method="POST">
-        {% csrf_token %}
+<div class="flex items-center justify-center h-screen">
+    <div class=" bg-gray-900 rounded-xl shadow-md w-1/2 grid grid-cols-4">
+        <div class="col-start-2 col-span-2 flex-col p-6 bg-gray-900 h-full justify-center content-center">
+            <h2 class="text-2xl text-center mb-6 text-white self-center">Editar: {{ user.username }}</h2>
 
-        <label for="username">Nome de Usuário:</label>
-        <input type="text" id="username" name="username" value="{{ user.username }}">
+            <form class="self-center w-full space-y-2" method="POST">
+                {% csrf_token %}
 
-        <label for="password">Senha de Acesso:</label>
-        <input type="password" id="password" name="password">
+                <label for="username" class="block text-gray-100">Nome de Usuário:</label>
+                <input type="text" id="username" name="username" value="{{ user.username }}" class="w-full px-4 py-2 bg-gray-150 rounded-md">
 
-        <label for="role">Cargo</label>
-        <select name="role" id="role">
-            {% for value, label in roles %}
-                <option value="{{ value }}" {% if user.role == value %}selected{% endif %}>
-                    {{ label }}
-                </option>
-            {% endfor %}
-        </select>
+                <label for="password" class="block text-gray-100">Senha de Acesso:</label>
+                <input type="password" id="password" name="password" class="w-full px-4 py-2 bg-gray-150 rounded-md">
 
-        <label for="workplace">Seção:</label>
-        <select name="workplace" id="workplace">
-            {% for workplace in workplaces %}
-                <option value="{{ workplace.id }}" {% if user.workplace.id == workplace.id %}selected{% endif %}>
-                    {{ workplace }}
-                </option>
-            {% endfor %}
-        </select>
+                <label for="role" class="block text-gray-100">Cargo</label>
+                <select name="role" id="role" class="w-full px-4 py-2 bg-gray-150 rounded-md text-black">
+                    {% for value, label in roles %}
+                        <option value="{{ value }}" {% if user.role == value %}selected{% endif %}>
+                            {{ label }}
+                        </option>
+                    {% endfor %}
+                </select>
 
-        <button type="submit">
-            Salvar
-        </button>
+                <label for="workplace" class="block text-gray-100">Seção:</label>
+                <select name="workplace" id="workplace" class="w-full px-4 py-2 bg-gray-150 rounded-md text-black">
+                    {% for workplace in workplaces %}
+                        <option value="{{ workplace.id }}" {% if user.workplace.id == workplace.id %}selected{% endif %}>
+                            {{ workplace }}
+                        </option>
+                    {% endfor %}
+                </select>
 
-    </form>
+                <div class="w-full mb-6">
+                    <button class="bg-blue-800 shadow-md text-white px-6 py-2 rounded-lg hover:bg-blue-700 w-full mt-4" type="submit">Salvar</button>
+                </div>
+
+                <div class="mt-4">
+                    <a href="{% url 'manage' %}"
+                    class="block text-center bg-green-800 shadow-md text-white px-6 py-2 rounded-lg hover:bg-green-700">
+                        Voltar
+                    </a>
+                </div>
+            </form>
+        </div>
+    </div>
 </div>
 
 {% endblock %}
