--- a/ne_control/templates/ne_control/workplace_edit.html
+++ b/ne_control/templates/ne_control/workplace_edit.html
@@ -6,19 +6,30 @@
 
 {% block content %}
 
-<div class="pt-4">
-    <a href="{% url 'manage' %}">Voltar</a>
-    <form method="POST">
-        {% csrf_token %}
+<div class="flex items-center justify-center h-screen">
+    <div class=" bg-gray-900 rounded-xl shadow-md w-1/2 grid grid-cols-4">
+        <div class="col-start-2 col-span-2 flex-col p-6 bg-gray-900 h-full justify-center content-center">
+            <h2 class="text-2xl text-center mb-6 text-white self-center">Editar: {{ workplace.workplace }}</h2>
 
-        <label for="workplace">Nome de Seção:</label>
-        <input type="text" id="workplace" name="workplace" value="{{ workplace.workplace }}">
+            <form class="self-center w-full space-y-2" method="POST">
+                {% csrf_token %}
 
-        <button type="submit">
-            Salvar
-        </button>
+                <label for="workplace" class="block text-gray-100">Nome de Seção:</label>
+                <input type="text" id="workplace" name="workplace" value="{{ workplace.workplace }}" class="w-full px-4 py-2 bg-gray-150 rounded-md">
 
-    </form>
+                <div class="w-full mb-6">
+                    <button class="bg-blue-800 shadow-md text-white px-6 py-2 rounded-lg hover:bg-blue-700 w-full mt-4" type="submit">Salvar</button>
+                </div>
+
+                <div class="mt-4">
+                    <a href="{% url 'manage' %}"
+                    class="block text-center bg-green-800 shadow-md text-white px-6 py-2 rounded-lg hover:bg-green-700">
+                        Voltar
+                    </a>
+                </div>
+            </form>
+        </div>
+    </div>
 </div>
 
 {% endblock %}
