--- a/ne_control/templates/ne_control/list.html
+++ b/ne_control/templates/ne_control/list.html
@@ -68,6 +68,14 @@
                   name="cod_ne"
                   value="{{ note_ne.cod_ne }}"
                 />
+
+                <!-- PI da NE a ser reivindicada -->
+                <input
+                  class="hidden"
+                  type="text"
+                  name="pi"
+                  value="{{ note_ne.pi }}"
+                />
                 
                 {% if user.role == 'admin' %}
                   <button
