--- a/accounts/templates/log_and_reg.html
+++ b/accounts/templates/log_and_reg.html
@@ -7,7 +7,8 @@
     <title>{% block title %}{% endblock %}</title>
 
     <!-- Tailwind -->
-    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
+     <link rel="stylesheet" href="{% static '/css/output.css' %}">
     
     <!-- Style.css -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
